' Generated by UML Generator
' Encoded: pLXBSzis4BxhL-18rLAcPushHedRYLixpKZkz9390IBN51AIu02WNJNrV-y2VE4bodaSUh5DBFPRxBSlm2-bea8rPJ6JdrXLKq5BaXPKoerIWkqR1TSfhtRi7o0_pWui0v8oaHOmcvbTP5TIUTX2oaMsXPfBfhWuaiypGfOVitrw1sLTK0KhyflrfQLB_74HrKvEAywrPadhBN-yuwrU8kIAR44sXTg1MX317zysvOgmIirNzl6qlNjMPQ-EVqeGrrdIc5_zpeqGz7Z3fBgqTDPQIT87I8JvTW3dHdM4HKYMdJ2SWxe1ce7OSogoAwfeujYqXBzKIXpNiwUUONtQhw3MLNikfrfhcb6zmwMoeYKOClKVw3dcJPK7EnrsUX7yZSxBQPWzvmNGQeY4tj8YT04OcBe5aSEE2xKfSYwOEfI6hOlFcEEAfKz4eYmfqEGazMS2WsmDWAMsc1HmFus87BByy4rMdvo2UyrnbHS5Y3OVf5xSWNXWANIvrtrfAMtKADoC7suPZfZ9QRW5EGKsxmFKbQK4AHclT86reLnW9BFZYjpI-h9R-MF_4LAbNSTqgtab0RrbwdWPxbbtLVHEy5oqqA694EXdYpbzM9-uizIuIicazm9o31xk2XnjVptVqOBdhFekCBnHp-7f101Mv5Sg3wnRgUoJNuoYWTERO6q8HHGfUHx8F6p2IUY8gRs8Dq7vqIBTr7N1Kcm3lFAwJ4anTbJaicVi_GSqzS2PcGHO71AFVy_oHk3nKV8Nx6yVqd7DCzRMKyjOrq7rdzRqCXsW1iXkQxIPyMPV6DRQcGNPHlKdYGtUPEulMD0BuWFtJExq-k_bGNimcDI2QyDiDncb-HuRVyy2xkkciBCtEfajdLrt6DUej0J1SHtzxS28HXWuqGYMAEIjHy78qBrKWgQAZDCv6XjxYkcr6dS_8kmRvDbUpvZ4CNnywsrF1U1iZeNEZEZvy9TlQq5YbXOaOcTkHUBkM8FBIKghAoX0TGrT9dXH7CBMnyOQpbyOUZFk_I1CtGCi_NUMXm668unnuM9TZRm4KBOinfy3zBgFM00pIeAeMedLvjCMygQWOaYh2skXZRgzyFy8VgpNcsjBMnYnQjY373g8tR8KLxGmlGZaK4w2Lf-63tyK64CH8c8M5YJ0dxSzkSIN3zpnXAk3lbtw-6DMVuViVMMTB6XaZZ3cWujrP_dZrfuZ2Trsso8Ix6gRbO7t84ljAs4RPE4zubRnbw4xW3g4v9dAmnNJIC-CgTWJx0tETzvbozcNdtDlT7njdAVLodkXcMjbgXWUixqwuPbqDLht2d9TASX1hCbFf8B7GRms5JvUF7j-fWswTy_JBM6w7TYvt5u_poFDmudL-UnHF49tzVEhuELkuXhVFn0dRh1T_YuFI5xVyvF94pw0OFV7atinYP1Ey6V5L9VxfX88SRwe4CBRx9dtO_nVDIzUh9rAyVxTeCKc6FwxyuVbqdrenZROBohl-UMBu-y4lIlo9B2dv7BvRtV4OFpem_kBCwTt3Lu4KNAs-IJPBK53U1t05Wy4HjBcjFMNK6LDMVm7
' URL: http://www.plantuml.com/plantuml/uml/pLXBSzis4BxhL-18rLAcPushHedRYLixpKZkz9390IBN51AIu02WNJNrV-y2VE4bodaSUh5DBFPRxBSlm2-bea8rPJ6JdrXLKq5BaXPKoerIWkqR1TSfhtRi7o0_pWui0v8oaHOmcvbTP5TIUTX2oaMsXPfBfhWuaiypGfOVitrw1sLTK0KhyflrfQLB_74HrKvEAywrPadhBN-yuwrU8kIAR44sXTg1MX317zysvOgmIirNzl6qlNjMPQ-EVqeGrrdIc5_zpeqGz7Z3fBgqTDPQIT87I8JvTW3dHdM4HKYMdJ2SWxe1ce7OSogoAwfeujYqXBzKIXpNiwUUONtQhw3MLNikfrfhcb6zmwMoeYKOClKVw3dcJPK7EnrsUX7yZSxBQPWzvmNGQeY4tj8YT04OcBe5aSEE2xKfSYwOEfI6hOlFcEEAfKz4eYmfqEGazMS2WsmDWAMsc1HmFus87BByy4rMdvo2UyrnbHS5Y3OVf5xSWNXWANIvrtrfAMtKADoC7suPZfZ9QRW5EGKsxmFKbQK4AHclT86reLnW9BFZYjpI-h9R-MF_4LAbNSTqgtab0RrbwdWPxbbtLVHEy5oqqA694EXdYpbzM9-uizIuIicazm9o31xk2XnjVptVqOBdhFekCBnHp-7f101Mv5Sg3wnRgUoJNuoYWTERO6q8HHGfUHx8F6p2IUY8gRs8Dq7vqIBTr7N1Kcm3lFAwJ4anTbJaicVi_GSqzS2PcGHO71AFVy_oHk3nKV8Nx6yVqd7DCzRMKyjOrq7rdzRqCXsW1iXkQxIPyMPV6DRQcGNPHlKdYGtUPEulMD0BuWFtJExq-k_bGNimcDI2QyDiDncb-HuRVyy2xkkciBCtEfajdLrt6DUej0J1SHtzxS28HXWuqGYMAEIjHy78qBrKWgQAZDCv6XjxYkcr6dS_8kmRvDbUpvZ4CNnywsrF1U1iZeNEZEZvy9TlQq5YbXOaOcTkHUBkM8FBIKghAoX0TGrT9dXH7CBMnyOQpbyOUZFk_I1CtGCi_NUMXm668unnuM9TZRm4KBOinfy3zBgFM00pIeAeMedLvjCMygQWOaYh2skXZRgzyFy8VgpNcsjBMnYnQjY373g8tR8KLxGmlGZaK4w2Lf-63tyK64CH8c8M5YJ0dxSzkSIN3zpnXAk3lbtw-6DMVuViVMMTB6XaZZ3cWujrP_dZrfuZ2Trsso8Ix6gRbO7t84ljAs4RPE4zubRnbw4xW3g4v9dAmnNJIC-CgTWJx0tETzvbozcNdtDlT7njdAVLodkXcMjbgXWUixqwuPbqDLht2d9TASX1hCbFf8B7GRms5JvUF7j-fWswTy_JBM6w7TYvt5u_poFDmudL-UnHF49tzVEhuELkuXhVFn0dRh1T_YuFI5xVyvF94pw0OFV7atinYP1Ey6V5L9VxfX88SRwe4CBRx9dtO_nVDIzUh9rAyVxTeCKc6FwxyuVbqdrenZROBohl-UMBu-y4lIlo9B2dv7BvRtV4OFpem_kBCwTt3Lu4KNAs-IJPBK53U1t05Wy4HjBcjFMNK6LDMVm7
' Generated on: 2026-04-01T04:13:27.754620

@startuml
skinparam classAttributeIconSize 0
hide circle

class SmashRecordRepository {
  -jdbcTemplate: JdbcTemplate
  --
  +SmashRecordRepository(jdbcTemplate: JdbcTemplate)
  -mapRowToRecord(rs: ResultSet, rowNum: int): SmashRecord
  +findByUserId(userId: int): ArrayList<SmashRecord>
  +save(record: SmashRecord): int
  +findById(id: int): SmashRecord
  +getLeaderboardData(): ArrayList<LeaderboardEntry>
}

class UserRepository {
  -jdbcTemplate: JdbcTemplate
  --
  +UserRepository(jdbcTemplate: JdbcTemplate)
  -mapRowToUser(rs: ResultSet, rowNum: int): User
  +findByUsername(username: String): User
  +findById(id: int): User
  +existsByUsername(username: String): boolean
  +save(user: User): int
}

class MergeSortAlgorithm {
  +{static} sort(list: ArrayList<LeaderboardEntry>): ArrayList<LeaderboardEntry>
  -{static} merge(left: ArrayList<LeaderboardEntry>, right: ArrayList<LeaderboardEntry>): ArrayList<LeaderboardEntry>
}

class SmashController {
  -smashService: SmashService
  -authService: AuthService
  --
  +SmashController(smashService: SmashService, authService: AuthService)
  +saveRecord(sessionId: String, body: Map<String,Object>): ResponseEntity<Map<String,Object>>
  +getProgression(sessionId: String): ResponseEntity<?>
}

class AuthController {
  -authService: AuthService
  --
  +AuthController(authService: AuthService)
  +register(body: Map<String,String>): ResponseEntity<Map<String,Object>>
  +login(body: Map<String,String>): ResponseEntity<Map<String,Object>>
  +logout(sessionId: String): ResponseEntity<Map<String,Object>>
  +me(sessionId: String): ResponseEntity<Map<String,Object>>
}

class LeaderboardController {
  -leaderboardService: LeaderboardService
  --
  +LeaderboardController(leaderboardService: LeaderboardService)
  +getLeaderboard(): ResponseEntity<List<Map<String,Object>>>
}

class SmashCalcApplication {
  +{static} main(args: String[]): void
  +corsConfigurer(): WebMvcConfigurer
}

class SmashRecord {
  -id: int
  -userId: int
  -speedMps: double
  -recordedAt: String
  --
  +SmashRecord()
  +SmashRecord(userId: int, speedMps: double)
  +getSpeedKmh(): double
  +getId(): int
  +setId(id: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +getSpeedMps(): double
  +setSpeedMps(speedMps: double): void
  +getRecordedAt(): String
  +setRecordedAt(recordedAt: String): void
}

abstract class User {
  -id: int
  -username: String
  -passwordHash: String
  -displayName: String
  -createdAt: String
  --
  +User()
  +User(username: String, passwordHash: String, displayName: String)
  +getUserType(): String
  +canDeleteRecords(targetUserId: int): boolean
  +getId(): int
  +setId(id: int): void
  +getUsername(): String
  +setUsername(username: String): void
  +getPasswordHash(): String
  +setPasswordHash(passwordHash: String): void
  +getDisplayName(): String
  +setDisplayName(displayName: String): void
  +getCreatedAt(): String
  +setCreatedAt(createdAt: String): void
}

class RegularUser {
  +RegularUser()
  +RegularUser(username: String, passwordHash: String, displayName: String)
  +getUserType(): String
  +canDeleteRecords(targetUserId: int): boolean
}

class LeaderboardEntry {
  -username: String
  -bestSpeedKmh: double
  -totalSmashes: int
  -rank: int
  --
  +LeaderboardEntry(username: String, bestSpeedKmh: double, totalSmashes: int)
  +compareTo(other: LeaderboardEntry): int
  +getUsername(): String
  +setUsername(username: String): void
  +getBestSpeedKmh(): double
  +setBestSpeedKmh(bestSpeedKmh: double): void
  +getTotalSmashes(): int
  +setTotalSmashes(totalSmashes: int): void
  +getRank(): int
  +setRank(rank: int): void
}

class SmashService {
  -recordRepository: SmashRecordRepository
  --
  +SmashService(recordRepository: SmashRecordRepository)
  +saveSmash(userId: int, speedMps: double): SmashRecord
  +getHistory(userId: int): ArrayList<SmashRecord>
}

class AuthService {
  -userRepository: UserRepository
  -activeSessions: HashMap<String, Integer> = new HashMap<>()
  --
  +AuthService(userRepository: UserRepository)
  +register(username: String, password: String, displayName: String): String
  +login(username: String, password: String): String
  -createSession(userId: int): String
  +getUserFromSession(sessionId: String): User
  +logout(sessionId: String): void
  -hashPassword(password: String): String
  -verifyPassword(password: String, storedHash: String): boolean
}

class LeaderboardService {
  -recordRepository: SmashRecordRepository
  --
  +LeaderboardService(recordRepository: SmashRecordRepository)
  +getLeaderboard(): ArrayList<LeaderboardEntry>
}

SmashRecordRepository ..> SmashRecord
UserRepository ..> User
SmashController *-- SmashService
SmashController *-- AuthService
AuthController *-- AuthService
LeaderboardController *-- LeaderboardService
RegularUser --|> User
LeaderboardEntry ..> LeaderboardEntry
SmashService *-- SmashRecordRepository
SmashService ..> SmashRecord
AuthService *-- UserRepository
AuthService ..> User
LeaderboardService *-- SmashRecordRepository
@enduml